Fix desktop-gui layout issues when there's a plugins file error (#4962)

--- a/packages/desktop-gui/src/styles/components/_alerts.scss
+++ b/packages/desktop-gui/src/styles/components/_alerts.scss
@@ -42,12 +42,17 @@
   display: flex;
   flex-grow: 2;
   justify-content: center;
+  overflow: auto;
+  padding: 30px 60px;
 }
 
 .full-alert {
+  // `margin: auto` fixes issue with flexbox vertically-centered element + oveflow
+  // https://stackoverflow.com/questions/33454533/cant-scroll-to-top-of-flex-item-that-is-overflowing-container
+  margin: auto;
   overflow: auto;
-  text-align: center;
   padding: 20px;
+  text-align: center;
 
   .alert-content {
     text-align: left;
@@ -61,6 +66,11 @@
 
   code {
     padding: 1px 4px;
+  }
+
+  pre {
+    max-height: 200px;
+    overflow: auto;
   }
 
   summary {
